<resources>
    <string name="app_name">Alarm</string>
    <string name="alarm">Alarm</string>

    <!--    Main strings-->
    <string name="apply">Apply</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--    Week days-->
    <string name="monday_shortcut">Mon</string>
    <string name="tuesday_shortcut">Tue</string>
    <string name="wednesday_shortcut">Wed</string>
    <string name="thursday_shortcut">Thu</string>
    <string name="friday_shortcut">Fri</string>
    <string name="saturday_shortcut">Sat</string>
    <string name="sunday_shortcut">Sun</string>

    <string name="notify_channel_name">Alarm notify</string>


    <!--    Notification channels, desc-->
    <string name="notify_desc_alarm_starter">Chanel for keeping alive main service with is responsible for run alarms given time</string>
    <string name="notify_next_alarm_will_be">Next alarm will be</string>
    <string name="notify_no_upcoming_alarms">No upcoming alarms</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="title_home">Alarm</string>

    <!--    Menu-->
    <string name="title_next_alarm">Next alarm</string>
    <string name="title_timer">Timer</string>
    <string name="title_stopwatch">Stopwatch</string>
    <string name="title_setting">Settings</string>
    <string name="text_view_next_alarm">Next alarm</string>

    <!--    Home Fragment-->
    <string name="text_view_next_alarm_be">No upcoming alarms</string>
    <string name="add_new_alarm">Add new alarm</string>
    <string name="label">Label</string>

    <!--    Add, update new alarm-->
    <string name="snooze">Snooze</string>
    <string name="costume">Costume</string>
    <string name="turn_off_type">Turn off type</string>
    <string name="ringtone">Ringtone</string>
    <string name="create_new_alarm">Create new alarm</string>
    <string name="alarm_created">Alarm created</string>
    <string name="alarm_not_created">Alarm not created</string>
    <string name="alarm_created_local">Alarm created local</string>
    <string name="alarm_updated">Alarm updated</string>
    <string name="alarm_delete_local">Alarm delete local</string>
    <string name="alarm_update_local">Alarm update local</string>
    <string name="alarm_not_updated">Alarm not updated</string>
    <string name="next_alarms">Next alarms</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="error_con_to_service">Error while connection to service</string>
    <string name="alarm_will_start_in">Alarm will start in</string>
    <string name="single">Single</string>

    <string-array name="week_days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="alarm_turn_off_type">
        <item>Normal</item>
        <item>Math task</item>
        <item>Vibes</item>
    </string-array>
    <string-array name="ringtone_types">
        <item>Birds</item>
        <item>Costume ~ Alarm Classic</item>
        <item>Ocean</item>
        <item>Rooster</item>
        <item>Alarm Classic</item>
        <item>Siren</item>
    </string-array>
    <string-array name="snooze_duration">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>

<!--    Preferences-->
    <string name="feedback_category_key">feedback_category</string>
    <string name="feedback_category_title">feedback</string>
    <string name="feedback_key">feedback</string>
    <string name="feedback_title">Send feedback</string>

    <string name="account_category_title">Account Information</string>
    <string name="account_category_key">account_category</string>
    <string name="account_key">account</string>
    <string name="account_title">Account</string>
    <string name="account_summary_not_connected">Not connected</string>

    <string name="troubleshooting_category_title">Troubleshooting</string>
    <string name="troubleshooting_category_key">troubleshooting_category</string>
    <string name="troubleshooting_xiaomi_key">xiaomi_miui</string>
    <string name="troubleshooting_xiaomi_title">Xiaomi (MIUI)</string>
    <string name="troubleshooting_xiaomi_summary">Possible errors in Xiaomi phones/tablets</string>
    <string name="troubleshooting_autostart_key">autostart</string>
    <string name="troubleshooting_autostart_title">Autostart</string>
    <string name="troubleshooting_autostart_summary">Enable autostart after reboot device</string>

    <string name="auto_sync_key">auto_sync</string>
    <string name="auto_sync_category_key">sync_category</string>
    <string name="auto_sync_title">Enable auto sync</string>
    <string name="auto_sync_category_title">Sync Information</string>
    <string name="auto_sync_summary">Enable or disable data sync</string>

    <string name="sync_interval_key">sync_interval</string>
    <string name="sync_interval_title">Sync interval</string>
    <string name="sync_interval_summary">Define how often sync will be performed</string>

    <string name="report_tech_issues_and_features">Report technical issues or suggest new features</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sing_in">Sing in</string>
    <string name="to_apply_changed_settings_restart_device">To apply changed settings restart device</string>
    <string name="sing_up">Sing up</string>
    <string name="e_mail">E-mail</string>
    <string name="pref_previously_started">first_run</string>
    <string-array name="sync_interval_time">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hour</item>
        <item>6 hour</item>
        <item>12 hour</item>
    </string-array>

<!--    Preferences troubleshooting-->

    <string name="troubleshooting_xiaomi_lock_screen_key">xiaomi_lock_screen</string>
    <string name="troubleshooting_xiaomi_lock_screen_title">Lock screen</string>
    <string name="troubleshooting_xiaomi_lock_screen_summary">Alarm ringing don\'t show on lock screen</string>
    <string name="xiaomi_error_summary">When alarm rinnging activity not show over lock screen you have to enable this permission</string>


    <string name="missing_permission_display_over_apps">Missing permission \'Display over other apps\'</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>


</resources>